# enclavid

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  client_state.rs  compiler.rs  cwasm_cache.rs  disclosure_hash.rs  dto.rs  error.rs  executor.rs  handlers.rs  input.rs  keyprovider.rs  limits.rs  locale.rs  main.rs  policy_pull.rs  ref_key.rs  runtime.rs  shuffle.rs  state.rs  text_registry.rs  transport.rs
crates/api/src/applicant/: attestation.rs  auth.rs  callbacks.rs  connect.rs  input.rs  media_store.rs  mod.rs  persister.rs  report.rs  reset.rs  shared.rs  start.rs  status.rs  views.rs
crates/api/src/client/: auth.rs  create.rs  disclosures.rs  init.rs  mod.rs  session.rs  status.rs
crates/attestation/: Cargo.toml
crates/attestation/src/: error.rs  lib.rs  mock.rs  snp_dev.rs
crates/broker/: Cargo.toml
crates/broker-client/: Cargo.toml  build.rs
crates/broker-client/src/: auth.rs  cache.rs  domain.rs  error.rs  kbs.rs  lib.rs  registry.rs  session.rs  stores.rs  transport.rs
crates/broker-client/src/boundary/: mod.rs  outbound.rs  sentinel.rs
crates/broker-client/src/session/: core.rs  disclosure.rs  media.rs  metadata.rs  principal.rs  state.rs  status.rs
crates/broker-client/src/stores/: session.rs
crates/broker-client/src/stores/session/: core.rs  disclosure.rs  metadata.rs  state.rs  status.rs
crates/broker/src/: auth.rs  cache.rs  error.rs  kbs.rs  main.rs  oci.rs  sessions.rs  transport.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: auth.rs  config.rs  declarations.rs  discovery.rs  docker_config.rs  embed.rs  main.rs  policy_manifest.rs  registry_auth.rs  wit_role.rs
crates/cli/src/commands/: encrypt.rs  keygen.rs  login.rs  logout.rs  mod.rs  push.rs  validate.rs
crates/cli/src/commands/cloud/: login.rs  logout.rs  mod.rs  token.rs  workspace.rs
crates/cli/src/commands/oci/: mod.rs  push.rs
crates/cli/src/commands/plugin/: embed.rs  mod.rs  validate.rs
crates/cli/src/commands/policy/: embed.rs  encrypt.rs  keygen.rs  mod.rs  push.rs  seal.rs  validate.rs
crates/cli/src/commands/session/: cache.rs  create.rs  disclosures.rs  get.rs  mod.rs  transport.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  age_seal.rs  error.rs  kbswrap.rs  kdf.rs  lib.rs  ocicrypt.rs  secret_bytes.rs
crates/embedded/: Cargo.toml
crates/embedded/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine-compiler/: Cargo.toml
crates/engine-compiler/src/: compose.rs  decls.rs  hash.rs  lib.rs
crates/engine-compiler/tests/: compile_child.rs  embedded_nested.rs
crates/engine-executor/: Cargo.toml
crates/engine-executor/src/: lib.rs  listener.rs  media_store.rs  sanitize.rs
crates/engine-executor/src/embedded/: store.rs
crates/engine-executor/src/runner/: convert.rs  mod.rs  status.rs
crates/engine-executor/src/state/: host.rs
crates/engine-executor/tests/: happy_path.rs
crates/engine-executor/tests/fixtures/test-extra/: i18n.json  wkg.toml
crates/engine-executor/tests/fixtures/test-policy/: Cargo.toml  disclosure-fields.json  i18n.json  wkg.toml
crates/engine-rpc/: Cargo.toml
crates/engine-rpc/src/: bundle.rs  execute.rs  lib.rs
crates/engine-supervisor/: Cargo.toml
crates/engine-supervisor/src/: lib.rs
crates/engine-types/: Cargo.toml
crates/engine-types/src/: composition.rs  lib.rs  limits.rs
crates/engine-types/src/embedded/: mod.rs  registry.rs  store.rs
crates/engine/src/: biometrics.rs  disclosure.rs  documents.rs  form.rs  form_group.rs  host_state.rs  lib.rs  limits.rs  listener.rs  media.rs  media_store.rs  policy.rs  replay.rs  runner.rs  sanitize.rs  suspend.rs  wasmtime_shim.rs
crates/engine/src/embedded/: decls.rs  hash.rs  host.rs  mod.rs  registry.rs  store.rs
crates/engine/src/host/: disclosure.rs  embedded.rs  media.rs  mod.rs
crates/engine/src/intercept/: mod.rs  replay.rs  shim.rs
crates/engine/src/runner/: compose.rs  convert.rs  decls.rs  mod.rs  status.rs
crates/engine/src/state/: host.rs  kv.rs  mod.rs  plugin.rs
crates/engine/tests/: embedded_nested.rs  happy_path.rs
crates/engine/tests/fixtures/test-extra/: Cargo.toml
crates/hatch-client/: Cargo.toml
crates/hatch-client/src/: auth.rs  cache.rs  domain.rs  error.rs  kbs.rs  lib.rs  registry.rs  session.rs  transport.rs
crates/hatch-client/src/boundary/: inbound.rs  mod.rs  sentinel.rs
crates/hatch-client/src/session/: core.rs  disclosure.rs  media.rs  metadata.rs  principal.rs  state.rs  status.rs
crates/hatch-protocol/: Cargo.toml
crates/hatch-protocol/src/: lib.rs
crates/host-bridge/: Cargo.toml  build.rs
crates/host-bridge/src/: age_seal.rs  auth.rs  error.rs  grpc.rs  lib.rs  registry.rs  stores.rs  transport.rs
crates/host-bridge/src/boundary/: inbound.rs  mod.rs  outbound.rs  sentinel.rs
crates/host-bridge/src/stores/: disclosure.rs  metadata.rs  report.rs  session.rs  state.rs
crates/kbs-client/: Cargo.toml
crates/kbs-client/src/: lib.rs
crates/kbs-client/tests/: live.rs
crates/kbs-stub/: Cargo.toml
crates/kbs-stub/src/: lib.rs
crates/kbs-stub/tests/: e2e.rs
crates/ra-tls/: Cargo.toml
crates/ra-tls/src/: lib.rs
crates/ra-tls/tests/: handshake.rs
crates/runtime-protocol/: Cargo.toml
crates/runtime-protocol/src/: lib.rs
crates/untrusted/: Cargo.toml
crates/untrusted/src/: lib.rs
plugins/: Cargo.toml
plugins/face-age/: Cargo.toml  wkg.toml
plugins/face-age/src/: infer.rs  lib.rs
plugins/face-age/wit/: world.wit
plugins/face-detect/: Cargo.toml  wkg.toml
plugins/face-detect/src/: detect.rs  lib.rs
plugins/face-detect/wit/: world.wit
plugins/onnx-core/: Cargo.toml
plugins/onnx-core/src/: lib.rs
plugins/preprocess/: Cargo.toml  wkg.toml
plugins/preprocess/src/: lib.rs
plugins/preprocess/wit/: world.wit
plugins/vision/: Cargo.toml
plugins/vision/src/: lib.rs
plugins/vision/wit/: types.wit
plugins/well-known/: Cargo.toml  README.md  i18n.json  icons.json  wkg.toml
plugins/well-known/src/: lib.rs
plugins/well-known/wit/: world.wit
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
(+105 files in other folders)
