[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/attestation",
    "crates/broker",
    "crates/broker-protocol",
    "crates/cli",
    "crates/engine-compiler",
    "crates/engine-executor",
    "crates/engine-types",
    "crates/broker-client",
    "crates/crypto",
    "crates/embedded",
    "crates/kbs-client",
    "crates/runtime-protocol",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/enclavid/enclavid"
