[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/attestation",
    "crates/hatch",
    "crates/hatch-protocol",
    "crates/cli",
    "crates/engine-compiler",
    "crates/engine-executor",
    "crates/engine-types",
    "crates/hatch-client",
    "crates/engine-supervisor",
    "crates/crypto",
    "crates/embedded",
    "crates/kbs-client",
    "crates/engine-rpc",
    "crates/ra-tls",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/enclavid/enclavid"
