[package]
name = "enclavid-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Default: TCP listener + TCP gRPC connection to store (development /
# cross-provider). Enable `vsock` for the attested production build: vsock
# listener + vsock gRPC connection. Mutually exclusive at the binary level.
default = []
vsock = ["enclavid-session-store/vsock", "dep:tokio-vsock", "dep:hyper-util", "dep:hyper", "dep:tower-service"]

[dependencies]
enclavid-engine = { path = "../engine" }
enclavid-session-store = { path = "../session-store" }
enclavid-attestation = { path = "../attestation" }
axum = "0.8"
tower = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
base64ct = { version = "1", features = ["alloc"] }
secrecy = "0.10"
moka = { version = "0.12", features = ["future"] }
# X25519 ephemeral keypair for K_client wrapping. age is the same library
# the CLI uses for `enclavid encrypt` so wire formats line up — the public
# key serializes as `age1...` and clients can wrap K_client with stock age.
age = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
sha2 = "0.10"
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7", optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"], optional = true }
hyper = { version = "1", features = ["server", "http1", "http2"], optional = true }
tower-service = { version = "0.3", optional = true }
