[package]
name = "enclavid-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Default: TCP listener + TCP HTTP connection to the broker (development /
# cross-provider). Enable `vsock` for the attested production build: vsock
# listener + vsock connection to the broker. Mutually exclusive at the binary level.
default = []
vsock = ["broker-client/vsock", "dep:tokio-vsock", "dep:hyper-util", "dep:hyper", "dep:tower-service"]

[dependencies]
enclavid-engine = { path = "../engine" }
broker-client = { path = "../broker-client" }
broker-protocol = { path = "../broker-protocol" }
enclavid-crypto = { path = "../crypto" }
enclavid-kbs-client = { path = "../kbs-client" }
enclavid-attestation = { path = "../attestation", features = ["snp-dev"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "catch-panic", "sensitive-headers"] }
tokio = { version = "1", features = ["full"] }
# `join` / `join_all` for fanning out plugin pulls alongside the
# policy pull inside `applicant::shared::lookup_policy`. Only the
# combinator layer is needed; no Stream / Sink / executor pieces.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64ct = { version = "1", features = ["alloc"] }
secrecy = "0.10"
moka = { version = "0.12", features = ["future"] }
# age recipient-string parsing and stream encryption for the
# disclosure envelope sealed to `client_disclosure_pubkey`.
age = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
sha2 = "0.10"
# HKDF-SHA256 for deriving the per-session DisplayField shuffle seed
# from `tee_seal_key`. See `crate::shuffle` for derivation chain.
hkdf = "0.12"
# DisplayField order shuffle inside disclosure envelopes — ChaCha20
# seeded from `ShuffleKey::derive_envelope_seed`. See `crate::shuffle`.
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
thiserror = "1"

# Direct dep so the manifest-extraction code path doesn't pin to
# whichever wasmtime version happens to re-export wasmparser. Same
# version wasmtime transitively pulls — keeps the dep tree single.
wasmparser = "0.247"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7", optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"], optional = true }
hyper = { version = "1", features = ["server", "http1", "http2"], optional = true }
tower-service = { version = "0.3", optional = true }
