[package]
name = "enclavid-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Default: TCP listener + TCP HTTP connection to the hatch (development /
# cross-provider). Enable `vsock` for the attested production build: vsock
# listener + vsock connection to the hatch. Mutually exclusive at the binary level.
default = []
vsock = ["hatch-client/vsock", "dep:tokio-vsock", "dep:hyper-util", "dep:hyper", "dep:tower-service"]

[dependencies]
# The wasmtime-free engine leaf: the plain-data types the client-only
# orchestrator holds + projects — composition (PluginInstance / EmbeddedImport),
# the embedded registry (ref → data for the view/persister layers), limits, and
# text sanitize. api has NO engine-compiler AND NO engine-executor dep — compile
# runs on a separate compile-worker and execute on a separate execution-worker,
# so api links NEITHER Cranelift NOR the wasmtime runtime, unconditionally.
engine-types = { path = "../engine-types" }
# remoc client for BOTH workers: the Compiler (compile-worker) and the Executor
# (execution-worker), each over rpc; connection_cfg from rpc. api also SERVES
# the per-round CallbackService back to the keyless executor over the same
# connection (media_load / session_change — it holds the seal key, the worker
# does not).
remoc = { version = "0.18", default-features = false, features = [
    "rtc",
    "codec-ciborium",
] }
# The rpc contract — api needs BOTH halves: `compile` for the CompiledBundle /
# CompileError / CompilerService client (compile-worker output + L2 cache
# bundle), and `execute` for the ExecutorService client + CallbackService server
# + the run wire types (RunRequest / RunReply / RunStatus / Prop). Neither pulls
# Cranelift or the wasmtime runtime.
engine-rpc = { path = "../engine-rpc", default-features = false, features = [
    "compile",
    "execute",
] }
hatch-client = { path = "../hatch-client" }
hatch-protocol = { path = "../hatch-protocol" }
enclavid-crypto = { path = "../crypto" }
enclavid-kbs-client = { path = "../kbs-client" }
enclavid-attestation = { path = "../attestation", features = ["snp-dev"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "catch-panic", "sensitive-headers"] }
tokio = { version = "1", features = ["full"] }
# `join` / `join_all` for fanning out plugin pulls alongside the
# policy pull inside `applicant::shared::lookup_policy`. Only the
# combinator layer is needed; no Stream / Sink / executor pieces.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CBOR codec for the L2 cwasm-cache bundle (`crate::cwasm_cache`). Same
# codec the hatch wire DTOs use; deny_unknown_fields makes any bundle
# schema drift a decode error (→ cache miss).
ciborium = "0.2"
base64ct = { version = "1", features = ["alloc"] }
secrecy = "0.10"
moka = { version = "0.12", features = ["future"] }
# age recipient-string parsing and stream encryption for the
# disclosure envelope sealed to `client_disclosure_pubkey`.
age = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
sha2 = "0.10"
# HKDF-SHA256 for deriving the per-session DisplayField shuffle seed
# from `tee_seal_key`. See `crate::shuffle` for derivation chain.
hkdf = "0.12"
# DisplayField order shuffle inside disclosure envelopes — ChaCha20
# seeded from `ShuffleKey::derive_envelope_seed`. See `crate::shuffle`.
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7", optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"], optional = true }
hyper = { version = "1", features = ["server", "http1", "http2"], optional = true }
tower-service = { version = "0.3", optional = true }
