[package]
name = "enclavid-attestation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Default backend: software-mock signing with Ed25519. Used in dev / CI /
# pre-hardware deployments. Replace with `sev-snp` once the AMD-side wiring
# (firmware ioctl + VCEK chain validation) is implemented.
default = ["mock"]
mock = ["dep:ed25519-dalek", "dep:rand_core"]
sev-snp = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
