[package]
name = "broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "broker"
path = "src/main.rs"

[features]
# Default: TCP listener (dev / CI). Enable `vsock` for the attested
# production deployment — the broker binds a vsock CID/port the guest
# CVM dials. Mutually exclusive at the binary level.
default = []
vsock = ["dep:tokio-vsock"]

[dependencies]
broker-protocol = { path = "../broker-protocol" }

# HTTP server
axum = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Session state store (hard-wired; BROKER_REDIS_URL)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# L2 cwasm-cache blob store. Backend-agnostic `ObjectStore` trait: today
# a local filesystem (per-instance disk), swappable to S3/GCS for a
# shared fleet cache by config alone — the handlers stay unchanged.
object_store = "0.12"

# Outbound: OCI registry pulls + OIDC JWKS fetch (host-side network)
oci-client = "0.16"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"
url = "2"

# Digest verification convenience on OCI pulls
sha2 = "0.10"
hex = "0.4"

# Errors + logging + (de)serialization
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7", optional = true }
