[package]
name = "enclavid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Enclavid <hello@enclavid.com>"]
description = "Enclavid CLI for managing privacy-preserving KYC policies"
readme = "README.md"

[[bin]]
name = "enclavid"
path = "src/main.rs"

# Docker credential helper. Invoked by docker / oras / podman / our
# own `enclavid policy push` when a registry is configured to use
# helper-based auth (`credHelpers.<registry> = "enclavid"` in
# `~/.docker/config.json`). The protocol is simple: read registry
# hostname from stdin, print {"Username", "Secret"} JSON to stdout.
[[bin]]
name = "docker-credential-enclavid"
path = "src/bin/cred_helper.rs"

[dependencies]
enclavid-embedded = { path = "../embedded" }
# ocicrypt layer encryption (encrypt side) for the
# `enclavid oci push --encrypt` path.
enclavid-crypto = { path = "../crypto" }

clap = { version = "4.5", features = ["derive"] }

age = "0.11"

oci-client = "0.16"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
openidconnect = "4"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "signal"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

hex = "0.4"
sha2 = "0.10"
open = "5"
dirs = "5"
base64 = "0.22"
dialoguer = "0.11"

# Custom-section writer for embedding the policy manifest into the
# encrypted wasm bundle (see commands/policy/encrypt.rs). Pinned to
# the version wasmtime transitively pulls — keeps the dep tree from
# fanning out across multiple wasm-encoder versions.
wasm-encoder = "0.247"
# Component parser — read a component's top-level interface exports so
# `policy`/`plugin embed` can assert the artifact's WIT role matches the
# command group. Lockstep-versioned with wasm-encoder.
wasmparser = "0.247"
