[package]
name = "enclavid-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Symmetric AEAD for session-blob sealing. ChaCha20-Poly1305: constant-
# time without AES-NI assumptions, small dep tree.
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
# Hybrid public-key sealing to `age` recipients (consumer-readable
# blobs). `age1...` recipient strings; wire format matches stock age.
age = "0.11"

# ocicrypt layer cipher (AES-256-CTR + HMAC-SHA256, the ocicrypt
# `AES_256_CTR_HMAC_SHA256` scheme). In-house, byte-exact to the ocicrypt
# LayerBlockCipherOptions format so artifacts interop with standard
# ocicrypt tooling (skopeo / coco-keyprovider). See [`crate::ocicrypt`].
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# X25519 for the `age` recipient sealing path (see [`crate::age_seal`]).
x25519-dalek = { version = "2", features = ["static_secrets"] }
