[package]
name = "engine-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# The EXECUTE half of the engine fleet: deserialize a compiled `cwasm`,
# instantiate it, and drive ONE pure-reducer round through the bindgen host
# world (session-context, embedded resolvers, media blobs). This crate
# runs the UNTRUSTED policy wasm and carries NO Cranelift — its wasmtime is
# RUNTIME-only, so the execution-worker CVM has zero compiler surface. It
# shares only the plain-data engine-types leaf with engine-compiler; a
# serialized `cwasm` (produced there) is the sole input crossing in.
[dependencies]
engine-types = { path = "../engine-types" }
hatch-client = { path = "../hatch-client" }

# RUNTIME only — NO `cranelift`. `Component::deserialize` + instantiate +
# run need the runtime; codegen (`Component::new`) lives in engine-compiler.
# Same non-cranelift feature set otherwise so the `Config` (engine_config)
# matches the compiler's and a compiler-produced cwasm loads here.
wasmtime = { version = "46", default-features = false, features = [
    "component-model",
    "runtime",
    "std",
    "async",
] }

# Content-addresses each captured frame (`convert::event_to_wit`) so the
# blob store keys blobs by BLAKE3 hash.
blake3 = "1"

# --- execution-worker bin deps (optional) — pulled ONLY by the `worker`
# feature, so the LIB stays rpc/remoc-free. The worker BIN is the deployable
# execution-worker CVM: it wraps this crate's Executor in an
# `engine_rpc::ExecutorService` server, caches deserialized components per composition,
# and proxies mid-run callbacks (media_load / session_change) back to the
# orchestrator over the SAME remoc connection — KEYLESS (no tee_seal_key ever
# crosses in). ---
engine-rpc = { path = "../engine-rpc", default-features = false, features = ["execute"], optional = true }
remoc = { version = "0.18", default-features = false, features = [
    "rtc",
    "codec-ciborium",
], optional = true }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
], optional = true }
# Bounded per-composition cache of deserialized components (same idiom as the
# orchestrator's L1 PolicyCache: max_capacity + time_to_idle).
moka = { version = "0.12", features = ["future"], optional = true }

[features]
# Enables the `execution-worker` bin. api never enables it → the api
# orchestrator links only the pure lib types it re-points to engine-types /
# hatch-client, and NO wasmtime.
worker = ["dep:engine-rpc", "dep:remoc", "dep:tokio", "dep:moka"]

[[bin]]
name = "execution-worker"
required-features = ["worker"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# happy_path.rs is the end-to-end integration test: it COMPOSES a policy +
# plugins (engine-compiler), round-trips the cwasm onto this crate's engine,
# and drives full reducer rounds against real fixtures.
engine-compiler = { path = "../engine-compiler" }
# Reads the fixture's source-side disclosure-fields.json / i18n.json via the
# same helpers the CLI uses at seal time.
enclavid-embedded = { path = "../embedded" }
# fake_capture emits a real JPEG so the face-age plugin's in-sandbox
# decode → preprocess → inference pipeline has something to decode.
jpeg-encoder = "0.6"
# Shared build→componentize→embed pipeline — the SAME code `xtask
# push-plugins` uses, so tested and shipped artifacts match.
xtask = { path = "../../xtask" }
